2005-03-31  Atsushi Enomoto  <atsushi@ximian.com>

	* MSXslScriptManager.cs : added TARGET_JVM switch (that does not
	  support CodeDom). Use Guid.ToString("N").

2005-03-31  Atsushi Enomoto  <atsushi@ximian.com>

	* Compiler.cs : removed extraneous using_directive.

2005-03-25  Atsushi Enomoto  <atsushi@ximian.com>

	* XslKey.cs : the iterator does not require sorting (already sorted).
	  Removed unused code.

2005-03-23  Atsushi Enomoto  <atsushi@ximian.com>

	* XslStylesheet.cs :
	  Variables are stored per stylesheet and added to compiler after
	  all of the contents are processed (handle import precedence).
	  Imports are now processed in prior to other contents (incorrect
	  imports are now rejected). After imports, process includes to 
	  process nested imports. In-process included stylesheets are 
	  temporarily stored in including stylesheet.
	  Handle keys like variables are handled.
	  Added Compile() that is splitted from .ctor().
	* Compiler.cs :
	  Store keys in compiler and compiled stylesheet.
	  Duplicate variables in imports are now overriden as expected.
	* XsltCompiledContext.cs : use CompiledStylesheet.ResolveKey().

2005-03-22  Atsushi Enomoto  <atsushi@ximian.com>

	* XslTransformProcessor.cs : now it looks safe to remove SetContext()
	  from each EvaluateXXX() methods.
	* MsxslScriptManager.cs : not to leave reference to stylesheet
	  navigator, pass current node to Compile().
	* XslCompiledContext.cs : Added GetNavCache() that returns reusable
	  navigator cache for each pattern, to avoid Clone() and not to leave
	  reference to already-done instance navigator.

2005-03-22  Atsushi Enomoto  <atsushi@ximian.com>

	* Compiler.cs : Now it holds XPath parser and XSLT pattern parser.
	* XslKey.cs : Use XSLT pattern parser for match.
	  UsePattern is now "Use" (it is not a pattern). 
	  Reimplemented Evaluate() to make full use of index table.
	  Added Matches() to handle shorter match evaluation. For const value